--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ body :-ms-input-placeholder {
   top: 0;
   left: 0;
   width: 100%;
-  height: 1000px;
+  height: 200%;
   margin-top: 0px;
   overflow: hidden;
 }
@@ -146,6 +146,12 @@ form button:hover {
 }
 .bg-bubbles li:nth-child(1) {
   left: 10%;
+  width: 80px;
+  height: 80px;
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
+  -webkit-animation-duration: 17s;
+          animation-duration: 17s;
 }
 .bg-bubbles li:nth-child(2) {
   left: 20%;
@@ -158,15 +164,15 @@ form button:hover {
 }
 .bg-bubbles li:nth-child(3) {
   left: 25%;
-  -webkit-animation-delay: 4s;
-          animation-delay: 4s;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
 }
 .bg-bubbles li:nth-child(4) {
   left: 40%;
   width: 60px;
   height: 60px;
-  -webkit-animation-duration: 22s;
-          animation-duration: 22s;
+  -webkit-animation-duration: 4s;
+          animation-duration: 4s;
   background-color: rgba(255, 255, 255, 0.25);
 }
 .bg-bubbles li:nth-child(5) {
@@ -191,8 +197,8 @@ form button:hover {
   left: 55%;
   width: 20px;
   height: 20px;
-  -webkit-animation-delay: 15s;
-          animation-delay: 15s;
+  -webkit-animation-delay: 8s;
+          animation-delay: 8s;
   -webkit-animation-duration: 40s;
           animation-duration: 40s;
 }
@@ -200,8 +206,8 @@ form button:hover {
   left: 25%;
   width: 10px;
   height: 10px;
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
   -webkit-animation-duration: 40s;
           animation-duration: 40s;
   background-color: rgba(255, 255, 255, 0.3);
@@ -210,8 +216,8 @@ form button:hover {
   left: 90%;
   width: 160px;
   height: 160px;
-  -webkit-animation-delay: 11s;
-          animation-delay: 11s;
+  -webkit-animation-delay: 5s;
+          animation-delay: 5s;
 }
 @-webkit-keyframes square {
   0% {
@@ -219,8 +225,8 @@ form button:hover {
             transform: translateY(0);
   }
   100% {
-    -webkit-transform: translateY(-700px) rotate(600deg);
-            transform: translateY(-700px) rotate(600deg);
+    -webkit-transform: translateY(-2000px) rotate(600deg);
+            transform: translateY(-2000px) rotate(600deg);
   }
 }
 @keyframes square {
@@ -229,7 +235,7 @@ form button:hover {
             transform: translateY(0);
   }
   100% {
-    -webkit-transform: translateY(-700px) rotate(600deg);
-            transform: translateY(-700px) rotate(600deg);
+    -webkit-transform: translateY(-2000px) rotate(600deg);
+            transform: translateY(-2000px) rotate(600deg);
   }
 }
