--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ body :-ms-input-placeholder {
   top: 0;
   left: 0;
   width: 100%;
-  height: 1000px;
+  height: 200%;
   margin-top: 0px;
   overflow: hidden;
 }
@@ -66,7 +66,7 @@ body :-ms-input-placeholder {
   max-width: 1000px;
   margin: 0 auto;
   padding: 80px 0;
-  height: 1800px;
+  height: 200%;
   text-align: center;
 }
 .container h1 {
